# IdeaBot

./: CMakeLists.txt  Makefile
bot/: bot.cc
include/: base.h  core.h  device.h  nerve.h  threads.h
include/device/: intergral.h  terminal.h
